[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "drivers-attention-monitoring-system"
version = "0.1.0"
description = "A system for monitoring driver attention using YOLO and DeepFace."
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "opencv-python",
    "ultralytics",
    "deepface",
]
keywords = ["driver", "attention", "monitoring", "YOLO", "DeepFace"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Documentation" = "https://github.com/cousintiz/Driver-s-Attention-Monitoring-System"
"Source" = "https://github.com/cousintiz/Driver-s-Attention-Monitoring-System"
"Bug Tracker" = "https://github.com/cousintiz/Driver-s-Attention-Monitoring-System/issues"
